# drf-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  mypy.ini  pyproject.toml  ruff.toml
src/core/: models.py  paginators.py  urls.py  views.py
src/core/management/commands/: init_bucket.py
src/settings/: settings.py  urls.py
src/users/: models.py
src/users/migrations/: 0001_initial.py
